--- a/app/src/main/res/layout/exercise_set_cell.xml
+++ b/app/src/main/res/layout/exercise_set_cell.xml
@@ -58,7 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
-                    android:text="Sets"
+                    android:text="Reps"
                     android:textColor="#FFFFFF"/>
             </LinearLayout>
         </LinearLayout>
